--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "react/no-array-index-key": 0,
     "react/react-in-jsx-scope": 0,
     "react/jsx-key": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "no-unused-vars":0
   }
 }
