--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.1",
     "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.24",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.8.0",
@@ -18,6 +19,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "typesafe-actions": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
