--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "react/react-in-jsx-scope": 0,
     "react/jsx-key": 0,
     "react/prop-types": 0,
-    "no-unused-vars":0
+    "no-unused-vars":0,
+    "semi": [2, "always"]
   }
 }
